[metadata]
name = fox
author = 
author_email = 
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = 
description = 
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = 


[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
fox = data/*

[tool:pytest]
testpaths = "fox" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  fox/__init*
  fox/conftest.py
  fox/*setup_package*
  fox/tests/*
  fox/*/tests/*
  fox/extern/*
  fox/version*
  */fox/__init*
  */fox/conftest.py
  */fox/*setup_package*
  */fox/tests/*
  */fox/*/tests/*
  */fox/extern/*
  */fox/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
